<resources>
    <string name="app_name">Assignment 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>

    <string name="Login">login</string>
    <string name="LoginName">login name</string>
    <string name="password">password</string>
    <string name="Name">name</string>

    <string name="WhatDoesThisDo">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>

    <string name="loginButton">Login</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Check Box Dialog</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pick_color">Do you want to go back?</string>

    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>
    <string name="testToolbar">Test Toolbar</string>
    <string name="about">About</string>
    <string name="newMessage">New Message</string>

    <string name="weather_forecast">WeatherForecast</string>

    <string name="delete_message">Delete this message</string>
    <string name="message_here">Message Here</string>
    <string name="id_here">ID Here</string>
</resources>