<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_one"
        android:title="@string/action_one"
        android:icon="@drawable/one"
        android:orderInCategory="90"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/action_two"
        android:icon="@drawable/two"
        android:orderInCategory="91"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="@string/action_three"
        android:icon="@drawable/three"
        android:orderInCategory="92"
        app:showAsAction="always" />

    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="93"
        app:showAsAction="never" />
</menu>