<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_here"
        android:textSize="18sp"
        android:paddingBottom="8dp"
        android:gravity="right"/>
A
    <TextView
        android:id="@+id/idTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_here"
        android:textSize="16sp"
        android:paddingBottom="8dp"
        android:gravity="right" />

    <Button
        android:id="@+id/deleteMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_message"
        android:layout_gravity="center" />
</LinearLayout>
